changes made on all files

--- a/country.html
+++ b/country.html
@@ -27,7 +27,7 @@
     </p> 
     <!-- anchor tags -->
     <a href="sport.html">Sports</a>
-    <a href="book.html">Home Page</a>
+    <a href="index.html">Home Page</a>
 
     <h2 style="text-align: center;">10 MOST POWERFUL COUNTRIES OF THE WORLD</h2>
 
