--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Anchor Tags -->
     <a href="sport.html">Sports.</a>
-    <a href="country.html">See more</a>
+    <a href="country.html">Countries</a>
 
     <!--Creating the table  -->
     <h2 style="text-align: center;">My Ten Favorite books are:</h2>
