--- a/sport.html
+++ b/sport.html
@@ -27,8 +27,8 @@
 
    <!-- Anchor Tags -->
 
-   <a href="/index.html">Home Page</a>
-   <a href="/country.html">Countries</a>
+   <a href="index.html">Home Page</a>
+   <a href="country.html">Countries</a>
 
    <!-- discussing football -->
 
