changes made on all files

--- a/country.html
+++ b/country.html
@@ -26,7 +26,7 @@
         - Time Zone <br>
     </p> 
     <!-- anchor tags -->
-    <a href="sport.html">Sports</a>
+    <a href="sport.html">Click to see Sports blog</a>
     <a href="index.html">Home Page</a>
 
     <h2 style="text-align: center;">10 MOST POWERFUL COUNTRIES OF THE WORLD</h2>
