--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </p>
 
     <!-- Anchor Tags -->
-    <a href="sport.html">Sports.</a>
-    <a href="country.html">Countries</a>
+    <a href="sport.html">Click to see sports blog</a>
+    <a href="country.html">Click to see country blog</a>
 
     <!--Creating the table  -->
     <h2 style="text-align: center;">My Ten Favorite books are:</h2>
