--- a/sport.html
+++ b/sport.html
@@ -28,7 +28,7 @@
    <!-- Anchor Tags -->
 
    <a href="index.html">Home Page</a>
-   <a href="country.html">Countries</a>
+   <a href="country.html">Click to see country blog</a>
 
    <!-- discussing football -->
 
