changes added to country.html and sport.html

--- a/country.html
+++ b/country.html
@@ -13,18 +13,30 @@
         The nature of the world has been conceptualized differently in different fields. Some conceptions see the world as unique while others
         talk of a "plurality of world". <br>
         There are about <b>195</b> countries in the world which has been categorized into <b>4 parts</b> also known as <b>Continents</b>. Which are: <br>
-        1. Europe <br>
-        2. Asia <br>
-        3. Africa <br>
-        4. America <br>
+    </p>
+    <!-- ordered listing -->
+
+        <ol>
+            <li>Europe</li>
+            <li>Asia</li>
+            <li>Africa</li>
+            <li>America</li>
+        </ol>
+        
+    <p>   
         For this course we would be looking at the 10 most power countries of the world under the following categories: <br>
-        - Their Capital <br>
-        - Polpulation <br>
-        - Area <br>
-        - Currency <br>
-        - Official Language <br>
-        - Time Zone <br>
-    </p> 
+    </p>   
+    <!-- Unordered listing -->
+
+    <ul>
+        <li>Their Capital</li>
+        <li>Population</li>
+        <li>Area</li>
+        <li>Currency</li>
+        <li>Official Language</li>
+        <li>Time Zone</li>
+    </ul>
+
     <!-- anchor tags -->
     <a href="sport.html">Click to see Sports blog</a>
     <a href="index.html">Home Page</a>
