--- a/sport.html
+++ b/sport.html
@@ -16,12 +16,17 @@
     another or others for entertainment.Sports are part of every <u>Cultures</u> past and present,but each culture has its own 
     definition of Sports. <br>
     There are various forms of sports or sporting activities such as;<br>
-    1. Football <br>
-    2. Badminton <br>
-    3. Javelin <br>
-    4. Marathon <br>
-    5. Table tennis <br>
-    6. Volleyball etc. <br>
+    </p>
+    <!-- Orderd listing -->
+    <ol>
+        <li>Football</li>
+        <li>Badminton</li>
+        <li>Javelin</li>
+        <li>Marathon</li>
+        <li>Table tennis</li>
+        <li>Volley Ball</li>
+    </ol>
+    <p>
     But for the course of our study,we would be concentrating specifically on football.
    </p>
 
